changed the way, how java is executed
* using path variables instead of the exact path to java binary

--- a/payload-src/macosx/binaries.ini
+++ b/payload-src/macosx/binaries.ini
@@ -1,2 +1,2 @@
-KNIME_JAVA=$ROOT/../../../jre/Home/bin/java
-PIA_RUNNABLE=$ROOT/lib/pia-1.0.0-dev.jar
+PATH=$ROOT/../../../jre/Home/bin/:${PATH}
+PIA_RUNNABLE=$ROOT/lib/pia-1.0.1-SNAPSHOT.jar
