--- a/payload-src/win/binaries.ini
+++ b/payload-src/win/binaries.ini
@@ -1,2 +1,3 @@
-KNIME_JAVA=$ROOT\\..\\..\\..\\jre\\bin\\java.exe
-PIA_RUNNABLE=$ROOT\\lib\\pia-1.0.0-dev.jar
+PATH=$ROOT\\..\\..\\..\\jre\\bin\\
+Path=$ROOT\\..\\..\\..\\jre\\bin\\
+PIA_RUNNABLE=$ROOT\\lib\\pia-1.0.1-SNAPSHOT.jar
