--- a/payload-src/lnx/binaries.ini
+++ b/payload-src/lnx/binaries.ini
@@ -1,2 +1,2 @@
-KNIME_JAVA=$ROOT/../../../jre/bin/java
-PIA_RUNNABLE=$ROOT/lib/pia-1.0.0-dev.jar
+PATH=$ROOT/../../../jre/bin/:${PATH}
+PIA_RUNNABLE=$ROOT/lib/pia-1.0.1-SNAPSHOT.jar
